<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image6"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="35dp">

        <ImageButton
            android:id="@+id/btn_create_back"
            android:layout_width="100dp"
            android:layout_height="72dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="-80dp"
            android:src="@drawable/baseline_keyboard_arrow_left_24"
            tools:ignore="ContentDescription,ImageContrastCheck,RtlSymmetry,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.4"
            android:text="@string/s"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_create_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/edittext"
            android:hint="@string/names"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            tools:ignore="Autofill,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editText_create_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:hint="@string/description_create"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            tools:ignore="Autofill,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:letterSpacing="0.3"
            android:text="@string/createss"
            app:backgroundTint="@null"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />


    </LinearLayout>

</RelativeLayout>